<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/siteImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/description_ArchSiteImage"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/txt_siteName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_ArchSiteName"
            app:layout_constraintEnd_toStartOf="@+id/check_visited"
            app:layout_constraintStart_toEndOf="@+id/siteImage"
            app:layout_constraintTop_toTopOf="@+id/siteImage" />

        <TextView
            android:id="@+id/txt_siteLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/text_ArchSiteLocation"
            app:layout_constraintBottom_toBottomOf="@+id/siteImage"
            app:layout_constraintEnd_toStartOf="@+id/check_visited"
            app:layout_constraintStart_toEndOf="@+id/siteImage" />

        <CheckBox
            android:id="@+id/check_visited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:text="@string/text_ArchSiteVisited"
            app:layout_constraintBottom_toBottomOf="@+id/txt_siteLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_siteName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>