<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.archsite.ArchSiteView">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@color/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:auto_cycle="true"
                    app:corner_radius="20"
                    app:delay="0"
                    app:period="1000"
                    app:placeholder="@color/colorPrimary" />

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_addImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/text_btn_AddImage"
                app:layout_constraintEnd_toStartOf="@+id/txt_dateVisited"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <requestFocus />
            </Button>

            <EditText
                android:id="@+id/txt_ArchSite_Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/text_ArchSiteName"
                android:inputType="textPersonName"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_addImage" />

            <Switch
                android:id="@+id/check_ArchSite_visited"
                android:layout_width="45dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:switchPadding="10dp"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="@+id/btn_addImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_addImage" />

            <EditText
                android:id="@+id/txt_ArchSite_Description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/text_ArchSiteDescription"
                android:inputType="textMultiLine"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_ArchSite_Name" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_ArchSite_Notes" />

            <TextView
                android:id="@+id/txt_dateVisited"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:minLines="2"
                android:text="@string/text_ArchSiteVisited"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_addImage"
                app:layout_constraintEnd_toStartOf="@+id/check_ArchSite_visited"
                app:layout_constraintTop_toTopOf="@+id/btn_addImage" />

            <EditText
                android:id="@+id/txt_ArchSite_Notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/text_ArchSiteNotes"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_ArchSite_Description" />

            <ToggleButton
                android:id="@+id/btn_favorite"
                android:layout_width="45dp"
                android:layout_height="0dp"
                android:layout_marginEnd="16dp"
                android:background="#00000000"
                android:foreground="@drawable/btn_favorite"
                android:textOff="@null"
                android:textOn="@null"
                app:layout_constraintBottom_toBottomOf="@+id/txt_ArchSite_Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txt_ArchSite_Name" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>